# ThermoMPNN-D

./: .gitignore  README.md  environment.yaml  pyproject.toml
src/file_utils/: __init__.py  rmsd_misaligned_pdbs.py
src/proteinmpnn/: __init__.py
src/thermompnn/: __init__.py  ssm_utils.py  train_thermompnn.py
src/thermompnn/datasets/: __init__.py  v2_datasets.py
src/thermompnn/examples/: __init__.py
src/thermompnn/examples/configs/: __init__.py  local.yaml
src/thermompnn/inference/: __init__.py
src/thermompnn/model/: __init__.py
src/thermompnn/trainer/: __init__.py
src/thermompnn_d/: __init__.py  v2_ssm.py
test/: test_cli_integration.py
thermompnn/datasets/: v2_datasets.py
