[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermompnn-d"
version = "0.1.0"
description = "ThermoMPNN-D packaging for inference and training utilities."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "ThermoMPNN-D Contributors"}
]
keywords = ["protein", "stability", "machine-learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "biopython",
    "numpy",
    "omegaconf",
    "pandas",
    "pytorch-lightning",
    "scipy",
    "torch",
    "tqdm",
    "wandb"
]

[project.optional-dependencies]
test = ["pytest >=7.4.2", 
        "pytest-datadir~=1.4.1"]

[project.scripts]
thermompnn = "thermompnn_d.v2_ssm:_entrypoint"
train_thermompnn = "thermompnn.train_thermompnn:_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
thermompnn = [
    "model_weights/*.ckpt",
    "vanilla_model_weights/*.pt",
    "examples/configs/*.yaml",
    "examples/pdbs/*"
]
